<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicios.EstadisticaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_TituloEstadistica" />

    <EditText
        android:id="@+id/editTextCaja1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <EditText
        android:id="@+id/editTextCaja2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <EditText
        android:id="@+id/editTextCaja3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/button_ResultadoEstadistica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Graficos"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewGrafico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/button_SalirEstadistica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Salir" />

</LinearLayout>